2011-12-19 21:47  mataki

	* ChangeLog, NEWS, bin/pitch/pitch.c: Fix NEWS and pitch.c for
	  layout of help message.

2011-12-19 15:14  mataki

	* ChangeLog: update ChangeLog for SPTK-3.5.

2011-12-19 15:00  mataki

	* NEWS, README, configure.ac, bin/bcp/bcp.c, bin/delta/delta.c,
	  bin/dtw/dtw.c, bin/frame/frame.c, bin/lpc2lsp/lpc2lsp.c,
	  bin/lsp2lpc/lsp2lpc.c, bin/lspcheck/lspcheck.c,
	  bin/merge/merge.c, bin/mfcc/_mfcc.c, bin/pitch/pitch.c,
	  bin/psgr/psgr.c, bin/sopr/sopr.c, include/SPTK.h,
	  script/wav2raw.in: Update all documents to SPTK-3.5.	Unify
	  linefeed code of all source code into <LF>.  Fix all indent in
	  all source code by using 'indent -kr -nut -i 3 -l 80' command.

2011-12-12 21:51  mataki

	* bin/pca/: pca.c, pcas.c: fix bug for fprintf, suggested by
	  Junichi Yamagishi, University of Edinburgh.

2011-12-12 13:49  sawada11

	* bin/pitch/pitch.c: Modify -s option (Hz -> kHz, int -> float)

2011-12-12 13:47  sawada11

	* bin/: lspcheck/lspcheck.c, lspcheck/_lspcheck.c,
	  lsp2lpc/lsp2lpc.c, lpc2lsp/lpc2lsp.c: Change sample frequency
	  data type (int -> float)

2011-12-10 13:08  mataki

	* bin/: excite/excite.c, fig+fdrw/fig1.c, nrand/nrand.c,
	  pitch/pitch.c: bug fix.

2011-12-09 20:38  mataki

	* configure.ac, bin/Makefile.am, bin/Makefile.mak,
	  bin/dtw/.cvsignore, bin/dtw/Makefile.am, bin/dtw/dtw.c: add dtw
	  command.

2011-12-09 15:39  sawada11

	* bin/frame/frame.c: Fix bug

2011-12-08 17:43  mataki

	* bin/: mfcc/mfcc.c, df2/df2.c: Change unit for sampling frequency:
	  Hz -> kHz.

2011-12-07 21:28  uratec

	* include/SPTK.h, lib/Makefile.am: remove an old source.

2011-12-07 19:21  uratec

	* bin/pitch/_pitch.c: remove an old source.

2011-12-07 18:22  mataki

	* bin/psgr/eps.c: add '#include <string.h>' for function 'strcpy'.

2011-12-06 18:29  sawada11

	* bin/pitch/: pitch.c, snack/jkGetF0.c: Correspond to the lack of
	  the number of frame in snack

2011-11-30 13:21  sawada11

	* bin/frame/frame.c: Fix bug
